[Mac] never update caption user style sheet during parsing https://bugs.webkit.org/show_bug.cgi?id=143499

Reviewed by Jer Noble.

* page/CaptionUserPreferencesMediaAF.cpp:
(WebCore::CaptionUserPreferencesMediaAF::setInterestedInCaptionPreferenceChanges):
(WebCore::CaptionUserPreferencesMediaAF::captionPreferencesChanged):  Ignore a
    "preferences changed" notification fired while registering for said notification, we
    already create and insert the style sheet after a brief delay anyway.
* page/CaptionUserPreferencesMediaAF.h:


Canonical link: https://commits.webkit.org/161524@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182505 268f45cc-cd09-0410-ab3c-d52691b4dbfc